<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_primary_color"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24sp"
                android:layout_marginLeft="24sp"
                android:layout_marginTop="32sp"
                android:layout_marginEnd="24sp"
                android:layout_marginRight="24sp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_your_username"
                android:inputType="textPersonName"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/primary_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/labelNumberOfQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/choose_number_of_questions"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/etNumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/text_icons"
                android:ems="10"
                android:gravity="center"
                android:inputType="number" />

            <TextView
                android:id="@+id/labelCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/select_category"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/text_icons"
                android:gravity="center" />

            <TextView
                android:id="@+id/labelDifficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/select_difficulty"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerDifficulty"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/text_icons"
                android:gravity="center" />

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/start_quiz"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnScoreboard1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="32dp"
                android:text="Scoreboard"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>